Introduce a new endpoint to download parse result of the provided mscons raw form, bump openapi version to 3.1.1, bump app version to 1.204c.1
